mudei o nome dos arquivos para manter um padrão, criei a subPasta Auth para fazer funções de login e registro, e documentei as novas rotas no swagger
